# AI-Pipeline-Visualizer

./: .gitignore  AGENTS.md  DESIGN.md  HowTo.MD  README.md
.cursor/agents/: precision-ui.md  ui-motion.md
.cursor/plans/: rag_pipeline_visualizer_128a3681.plan.md
.cursor/rules/: decoupled-architecture-and-interfaces.mdc  design-system-precision.mdc
backend/: main.py  pyproject.toml
backend/src/adapters/ollama/: ollama_models.py
backend/src/adapters/rerank/: noop_reranker.py
backend/src/adapters/scenario_fs/: repository.py
backend/src/adapters/vector/: in_memory_index.py  tfidf_index.py
backend/src/domain/: chunking.py  validation.py
backend/src/domain/models/: types.py
backend/src/domain/ports/: services.py
backend/src/infra/: container.py
backend/src/rag_visualizer_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/src/transport/http/: app.py  dto.py
backend/src/usecases/: run_rag_pipeline.py  scenarios.py  timeline.py
frontend/: DESIGN.md  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/data/: medicines_enriched.json
frontend/src/domain/: medicineTaxonomy.ts
frontend/src/shared/: types.ts
frontend/src/usecases/: useRunController.ts  (+1 more)
scenarios/: default.yaml  general_chat.yaml  medicine_rag.yaml
scenarios/docs/: rag_intro.md
scenarios/medicine_rag/: .enrich_layman_checkpoint.json  .enrich_layman_current_stream.txt  medicine_disclaimer.md  medicines_corpus.seed.md
scripts/: build_embedding_cache.py  generate_medicine_corpus.py
(+15 files in other folders)
