[project]
name = "rag-visualizer-backend"
version = "0.1.0"
description = "FastAPI backend for RAG pipeline visualization"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn>=0.35.0",
  "httpx>=0.28.0",
  "pydantic>=2.11.0",
  "pyyaml>=6.0.2",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
